# tasca

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CODE-OF-CONDUCT.md  CUTOUT.md  Cargo.toml  DISCOVERY.md  LICENSE  Makefile  NOTICE  README.md  SELF_HOST.md  docker-compose.yml  local-build.sh  mobile-testing.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/: dependabot.yml
app/: Dockerfile  Dockerfile.build  astro.config.mjs  nginx.conf  package.json  pnpm-lock.yaml  vitest.config.ts
crates/assignment-engine/: Cargo.toml
crates/assignment-engine/src/: lib.rs  validation.rs
deploy/: base.Dockerfile  compose.yml  runner.Dockerfile  verify-egress.sh  worker.Dockerfile
design-system/: .gitignore  Error Pages.html  IMPLEMENTATION-PLAN.md  Onboarding.html  REMAINING-WORK.md  Roster Exploration.html  Tasca Design Tokens.html  Tasca-Docs.html  Tasca-Home.html  Tasca-Legal.html  Tasca-Pricing.html  Tasca-Product.html  Tasca-Security.html  Tasca.html  app.html  components.html  docs.html  error.html  foundation-content.js  guest.html  index-print.html  index.html  login.html  privacy.html  roster-content.js  run.html  security.html  settings.html  terms.html  tokens.html
docs/: DESIGN-SPEC.md  Execution-Roadmap-v2.md  Execution-Roadmap-v3-OSS.md  M1-PLAN.md  M1-spike-seam.md  PRD-Completion-Gap-Analysis.md  PRD.md  ROADMAP.md  SEMVER.md  STACK-DECISION.md  Security-Review-Stage1.md  Tasca-Deploy-Spec-v1.0.md  Tasca-GitHub-Kickoff-Brief.md  Tasca-PRD-v1.0-FINAL.md  VISION.md  docs.json  (+14 more)
(+425 files in other folders)
